language/move-prover/tests/sources/functional/loops.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/loops.move:60:9 ───
    │
 60 │         aborts_if true;
    │         ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/loops.move:49:5: iter10_no_abort_incorrect (entry)
    =     at tests/sources/functional/loops.move:50:13: iter10_no_abort_incorrect
    =     at tests/sources/functional/loops.move:52:13: iter10_no_abort_incorrect
    =         i = <redacted>
    =     at tests/sources/functional/loops.move:51:9: iter10_no_abort_incorrect
    =     at tests/sources/functional/loops.move:49:5: iter10_no_abort_incorrect (exit)
